# prism

./: .gitignore  README.md  pyproject.toml
prism/: __init__.py  cli.py  config.py  proxy.py  routing.py
prism/resources/: default_config.yaml
tests/: test_cli.py  test_config.py  test_e2e_routing.py  test_proxy.py  test_routing.py  test_security.py
